fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@ ul{margin: 0}
 li{list-style-type: none;display: inline-block;}
 /* Header */
 #header{
+    z-index: 9;
     position: fixed;
     height: 60px;
     width: 100%;
+    background-color: #fff;
     box-shadow: 0 1px 5px #ddd;
 }
 .header{z-index: 9}
